fix result spacing and add closing logic

--- a/src/styles/cards.module.css
+++ b/src/styles/cards.module.css
@@ -202,23 +202,6 @@
 }
 
 
-.overlayImage {
-  position: absolute;
-  top: 49%;  
-  left: 50%; 
-  transform: translate(-50%, -50%); 
-  z-index: 0; 
-  width: 46vw; 
-  height: 46vh;
-}
-
-.overlayPng {
-  width: 100%;  
-  height: 100%; 
-  object-fit: contain; /* Maintain the aspect ratio of the image */
-}
-
-
 .headlineSection {
   text-align: center;
   margin-top: -80px;
