--- a/src/styles/results.module.css
+++ b/src/styles/results.module.css
@@ -199,19 +199,21 @@
 .largeCardImage {
   width: 220px; /* Larger card size */
   height: auto;
-  padding-top: 20px;
 }
 
 
 
 .cardDescription {
   font-family: var(--font-sabon);
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-style: italic;
   color: white;
-  margin-top: 60px;
+  margin-top: 20px; /* Reduce space between card and description */
   text-align: center;
   max-width: 80%;
+  line-height: 1.5; 
+  padding: 20px 20px;
+  margin-bottom: 60px; /* Add spacing from the bottom of the modal */
 }
 
 
@@ -234,8 +236,8 @@
 .modal .header {
   position: relative;
   width: 100%;
-  margin-top: 100px; 
-  text-align: center; /* Center aligns the header text */
+  margin-top: 45px; 
+  text-align: center;
 }
 
 .modal .headerButton {
@@ -243,7 +245,7 @@
   font-weight: 200;
   color: white;
   font-size: 0.8rem;
-  display: inline-block; /* Ensure the text stays centered */
+  display: inline-block;
   margin-left: 0px;
 }
 
@@ -260,26 +262,25 @@
   font-weight: 200;
   font-size: 2.5rem;
   position: relative;
-  top: 32px; 
 }
 
 .modalContent {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%; /* Make sure it takes up the full height of the modal */
-  position: relative; /* This allows for positioning the arrows inside */
+  flex-direction: column; /* Stack elements vertically */
+  justify-content: center; /* Center vertically */
+  align-items: center; /* Center horizontally */
+  height: 100%; /* Full height to ensure alignment */
+  position: relative;
 }
 
 .modalCard {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: column; /* Ensure the card and description are stacked */
+  align-items: center; /* Center the card and description */
   position: relative;
-  z-index: 10; 
-  padding-bottom: 180px;
+  z-index: 10;
+  padding-bottom: 0; /* Remove extra padding */
 }
-
 .arrowButton {
   background-color: transparent;
   border: none;
